--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,12 @@
   <body>
     <header>
       <nav>
-        <button class="home">Home</button>
-        <button class="menu">Menu</button>
-        <button class="contact">Contact</button>
+        <div class="logo">Fresh Food</div>
+        <div class="nav-buttons">
+          <button class="home">Home</button>
+          <button class="menu">Menu</button>
+          <button class="contact">Contact</button>
+        </div>
       </nav>
     </header>
     <div id="content"></div>
